--- a/cubemx/cubemx.ioc
+++ b/cubemx/cubemx.ioc
@@ -1,135 +1,73 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F0
-ProjectManager.MainLocation=Src
-RCC.I2SFreq_Value=48000000
-RCC.MCOFreq_Value=48000000
-RCC.USART1Freq_Value=48000000
-ProjectManager.ProjectFileName=cubemx.ioc
-PA7.Mode=Simplex_Bidirectional_Master
-ProjectManager.KeepUserCode=true
-Mcu.UserName=STM32F051R8Tx
-Mcu.PinsNb=12
-SPI1.VirtualType=VM_MASTER
-PC9.GPIO_Label=LD3 [Green Led]
-ProjectManager.NoMain=false
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,VirtualNSS
-RCC.PLLCLKFreq_Value=48000000
-PA9.GPIO_Label=CFAL1602C-E
-PA14.GPIO_Label=SWCLK
-PA0.GPIO_Label=B1 [Blue PushButton]
-ProjectManager.functionlistsort=
-PC8.Signal=GPIO_Output
-PA9.GPIOParameters=GPIO_Label
-SH.GPXTI0.ConfNb=1
-PC9.Locked=true
-ProjectManager.DefaultFWLocation=true
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-ProjectManager.DeletePrevious=true
-boardIOC=true
-PinOutPanel.RotationAngle=0
-RCC.FamilyName=M
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-ProjectManager.StackSize=0x400
-PC8.GPIO_Label=LD4 [Blue Led]
-PA13.Signal=SYS_SWDIO
-RCC.FCLKCortexFreq_Value=48000000
-Mcu.IP2=SPI1
-Mcu.IP3=SYS
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.UserConstants=
-PA4.Mode=NSS_Signal_Hard_Output
-ProjectManager.TargetToolchain=EWARM V8.32
-Mcu.ThirdPartyNb=0
-SPI1.Direction=SPI_DIRECTION_1LINE
-RCC.HCLKFreq_Value=48000000
-Mcu.IPNb=4
-ProjectManager.PreviousToolchain=
-PA9.Signal=GPIO_Output
-SPI1.CalculateBaudRate=24.0 MBits/s
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-RCC.AHBFreq_Value=48000000
-Mcu.Pin0=PA0
-Mcu.Pin1=PA4
-Mcu.Pin2=PA5
-Mcu.Pin3=PA7
-Mcu.Pin4=PC8
-Mcu.Pin5=PC9
-PA5.Signal=SPI1_SCK
-ProjectManager.ProjectBuild=false
-PA0.Locked=true
-board=STM32F0DISCOVERY
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.LastFirmware=true
 RCC.PLLMUL=RCC_PLL_MUL12
+ProjectManager.MainLocation=Src
+RCC.I2SFreq_Value=48000000
+RCC.MCOFreq_Value=48000000
 ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.2
 MxDb.Version=DB.5.0.60
+RCC.USART1Freq_Value=48000000
+ProjectManager.ProjectFileName=cubemx.ioc
 ProjectManager.BackupPrevious=false
 MxCube.Version=5.6.1
-SPI1.Mode=SPI_MODE_MASTER
-PA14.Mode=Serial_Wire
-PA0.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
+ProjectManager.KeepUserCode=true
+Mcu.UserName=STM32F051R8Tx
+Mcu.PinsNb=1
+ProjectManager.NoMain=false
 File.Version=6
-PA10.GPIO_Label=CFAL1602C-RS
-PA10.GPIOParameters=GPIO_Label
 VP_SYS_VS_Systick.Mode=SysTick
-PB3.GPIOParameters=GPIO_Label
-PA9.Locked=true
+RCC.PLLCLKFreq_Value=48000000
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-SPI1.VirtualNSS=VM_NSSHARD
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA13.Mode=Serial_Wire
+ProjectManager.functionlistsort=
 ProjectManager.FreePins=false
 RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value
-PC9.GPIOParameters=GPIO_Label
+ProjectManager.DefaultFWLocation=true
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F051R8Tx
 ProjectManager.HalAssertFull=false
-PA13.GPIO_Label=SWDIO
+NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+ProjectManager.DeletePrevious=true
 ProjectManager.ProjectName=cubemx
 ProjectManager.UnderRoot=false
-PA0.Signal=GPXTI0
 RCC.HSICECFreq_Value=32786.88524590164
-PA13.GPIOParameters=GPIO_Label
+boardIOC=true
 RCC.PLLMCOFreq_Value=24000000
 ProjectManager.CoupleFile=false
-PC8.GPIOParameters=GPIO_Label
-PB3.Signal=GPIO_Input
-PA4.Signal=SPI1_NSS
 RCC.SYSCLKFreq_VALUE=48000000
+PinOutPanel.RotationAngle=0
 Mcu.Package=LQFP64
+RCC.FamilyName=M
 RCC.TimSysFreq_Value=48000000
-PA10.Locked=true
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+ProjectManager.StackSize=0x400
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
-PA14.GPIOParameters=GPIO_Label
-PA14.Locked=true
-PA13.Locked=true
+RCC.FCLKCortexFreq_Value=48000000
 ProjectManager.CompilerOptimize=6
-ProjectManager.ToolChainLocation=Projects
+Mcu.IP2=SYS
+ProjectManager.ToolChainLocation=
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-SH.GPXTI0.0=GPIO_EXTI0
-PA10.Signal=GPIO_Output
-PA14.Signal=SYS_SWCLK
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
 ProjectManager.HeapSize=0x200
-PA0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.UserConstants=
+ProjectManager.TargetToolchain=EWARM V8.32
 ProjectManager.ComputerToolchain=false
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin10=PB3
+Mcu.ThirdPartyNb=0
+RCC.HCLKFreq_Value=48000000
+Mcu.IPNb=3
+ProjectManager.PreviousToolchain=
 RCC.CECFreq_Value=32786.88524590164
 RCC.APB1TimFreq_Value=48000000
-PC8.Locked=true
-PC9.Signal=GPIO_Output
 RCC.APB1Freq_Value=48000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+RCC.AHBFreq_Value=48000000
+Mcu.Pin0=VP_SYS_VS_Systick
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32F051R8Tx
 ProjectManager.LibraryCopy=0
-PB3.Locked=true
-PA5.Mode=Simplex_Bidirectional_Master
-PA7.Signal=SPI1_MOSI
-PB3.GPIO_Label=DHT11-DATA
+ProjectManager.ProjectBuild=false
+board=STM32F0DISCOVERY
